
  * data/fields/obsolete-packages:
    + [RA] Moved from common_data.pm.  Removed many very old packages that
      nothing depends on and added many new packages identified by Riku
      Voipio.  (Closes: #475400)

  * debian/control:
    + [RA] Update standards version to 3.8.0.
    + [RA] Depend on libtimedate-perl for convenient date parsing.

  * lib/Lintian/Collect.pm:
    + [RA] New module to retrieve package information.
  * lib/Lintian/Collect/Source.pm:
    + [RA] New module to retrieve source package information.

  * reporting/html_reports:
    + [RA] Copy over images.  Set the maintainer name to "Unknown
      Maintainer" if not known.  Pass the code for a tag into the per-tag
      page.  Based on a patch by Jordà Polo.
  * reporting/images/*:
    + [RA] New logo images from Jordà Polo.
  * reporting/lintian.css:
    + [RA] Significant overhaul of the lintian.d.o design by Jordà Polo.
  * reporting/templates/*:
    + [RA] Significant overhaul of the lintian.d.o design by Jordà Polo.
  * reporting/templates/clean.tmpl:
    + [FL] Include link to full maintainer report.  Suggested by
      Kartik Mistry.

 -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 May 2008 17:31:41 +0200

lintian (1.23.49) unstable; urgency=low

  The "Business as usual" release.

  * checks/binaries:
    + [FL] Ignore rpaths to directories present in the same binary
      package.  Also ignore $ORIGIN since that obviously fulfills
      that criterion.  (Closes: #480636)
  * checks/copyright-file{,.desc}:
    + [FL] Implement new check for dh-make-perl boilerplate.
    + [FL] New check for example URL from dh-make.  Based on
      a patch by Michal Čihař.  (Closes: #481368)
  * checks/debhelper:
    + [FL] dh_lintian needs debhelper >= 6.0.7. Patch by David Paleino.
      (Closes: #479088)
    + [FL] Add basic support for debhelpers new dh utility.
      (Closes: #477628)
    + [FL] Suppress maintainer-script-lacks-debhelper-token for