@@ -88,7 +88,7 @@ sub run {
 
 $pkg = shift;
 my $type = shift;
-$collect = Lintian::Collect->new($pkg, $type);
+$collect = shift;
 
 if (-e "debfiles/files" and not -z "debfiles/files") {
     tag 'debian-files-list-in-source';
